# AssetLibrary

./: AssetLoader.hpp  CMakeLists.txt
asset/: AssetFile.hpp  AssetLoader.cpp  AssetType.hpp  CompressionMode.hpp
convert/: AssetConverter.cpp  AssetConverter.hpp
include/candy/asset/: AssetFile.hpp  AssetLoader.hpp  AssetType.hpp  CompressionMode.hpp
include/candy/asset/convert/: AssetConverter.hpp  ImageConverter.hpp  ShaderConverter.hpp
include/candy/asset/shader/: ShaderData.hpp  ShaderMetaData.hpp
include/candy/asset/shader/processing/: ShaderCompilationSettings.hpp  ShaderCompiler.hpp  ShaderPostProcessor.hpp  ShaderPreProcessor.hpp
include/candy/asset/shader/profile/: ShaderEnums.hpp  ShaderProfileData.hpp  ShaderProfileTypes.hpp
include/candy/asset/texture/: TextureData.hpp  TexturePacker.hpp
lib/SPIRV-Cross/: main.cpp  spirv_common.hpp  spirv_cpp.cpp  spirv_cross.cpp  spirv_cross.hpp  spirv_cross_c.h  spirv_cross_containers.hpp  spirv_cross_parsed_ir.hpp  spirv_glsl.cpp  spirv_glsl.hpp  spirv_hlsl.hpp  spirv_msl.cpp  spirv_msl.hpp
lib/SPIRV-Cross/LICENSES/: MIT.txt
lib/SPIRV-Cross/tests-other/: hlsl_resource_bindings.cpp  msl_resource_bindings.cpp
lib/shaderc/glslc/: README.asciidoc
lib/shaderc/glslc/src/: main.cc  resource_parse.cc  resource_parse.h  resource_parse_test.cc
lib/shaderc/glslc/test/: option_flimit.py  parameter_tests.py
lib/shaderc/libshaderc/include/shaderc/: shaderc.h  shaderc.hpp
lib/shaderc/libshaderc_util/include/libshaderc_util/: compiler.h
lib/shaderc/libshaderc_util/src/: compiler_test.cc
src/: AssetLoader.cpp
src/convert/: AssetConverter.cpp  ImageConverter.cpp  ShaderConverter.cpp
src/shader/: ShaderData.cpp
src/shader/processing/: ShaderCompiler.cpp  ShaderPostProcessor.cpp  ShaderPreProcessor.cpp
src/texture/: TexturePacker.cpp
texture/: TextureData.hpp  TexturePacker.cpp  TexturePacker.hpp
